# forked_mosifra

./: .gitignore  .gitmodules  Cargo.toml  RAPPORT_TESTS.md  README.md  docker-compose.yml  dockerfile  flake.nix  init.sql
.github/workflows/: rust.yml  sonar.yml
scripts/bash/: start-without-rust-build.sh  start_and_remove_dbs.sh  start_and_remove_dbs_and_build.sh
scripts/pwsh/: start-without-rust-build.ps1  start_and_remove_dbs.ps1  start_and_remove_dbs_and_build.ps1
src/: db.rs  main.rs  utils.rs
src/routes/: login.rs  user.rs
src/types/: class.rs  company.rs  course_type.rs  internship.rs  mod.rs  role.rs  student.rs  university.rs
