[package]
name = "Mosifra-API"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
argon2 = "0.5.3"
dotenvy = "0.15.7"
lettre = "0.11.18"
passwords = "3.1.16"
rand = "0.9.2"
regex = "1.11.2"
rocket = { version = "0.5.1", features = ["json", "secrets"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = "0.7.13"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
